# Alias_tg_bot

./: bot.py  pyproject.toml
src/conf/: config.py
src/data/: buttons.py  dialogues.py  message.py  team_name.py
src/data/words/: simple_words.py
src/database/: connect.py
src/model/: markup.py  model.py  team.py
