[tool.poetry]
name = "alias-tg-bot"
version = "0.1.0"
description = ""
authors = ["Strategs <127782103+Serhix@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "alias_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.15.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
